# Projet_8INF867

./: CAC40.ipynb  README.md  RNN.ipynb  ml_sol.ipynb  predict_bourse.ipynb  pyproject.toml  run_ml2.py
