[tool.poetry]
name = "projet-8inf867"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
scipy = "^1.9"
python = "^3.11"
scikit-learn = "^1.3.2"
yfinance = "^0.2.31"
ipykernel = "^6.26.0"
matplotlib = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
